// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parses a simple template 1`] = `
Node {
  "end": 13,
  "expressions": [],
  "quasis": [
    Node {
      "end": 13,
      "start": 0,
      "tail": true,
      "type": "TemplateElement",
      "value": {
        "cooked": null,
        "raw": "Hello, world!",
      },
    },
  ],
  "start": 0,
  "type": "TemplateLiteral",
}
`;

exports[`parses a template with an interpolated expression 1`] = `
Node {
  "end": 18,
  "expressions": [
    Node {
      "end": 16,
      "raw": ""world"",
      "start": 9,
      "type": "Literal",
      "value": "world",
    },
  ],
  "quasis": [
    Node {
      "end": 7,
      "start": 0,
      "tail": false,
      "type": "TemplateElement",
      "value": {
        "cooked": null,
        "raw": "Hello, ",
      },
    },
    Node {
      "end": 18,
      "start": 17,
      "tail": true,
      "type": "TemplateElement",
      "value": {
        "cooked": null,
        "raw": "!",
      },
    },
  ],
  "start": 0,
  "type": "TemplateLiteral",
}
`;

exports[`parses a template with backquotes 1`] = `
Node {
  "end": 15,
  "expressions": [],
  "quasis": [
    Node {
      "end": 15,
      "start": 0,
      "tail": true,
      "type": "TemplateElement",
      "value": {
        "cooked": null,
        "raw": "Hello, \`world\`!",
      },
    },
  ],
  "start": 0,
  "type": "TemplateLiteral",
}
`;

exports[`parses a template with backslashes 1`] = `
Node {
  "end": 15,
  "expressions": [],
  "quasis": [
    Node {
      "end": 15,
      "start": 0,
      "tail": true,
      "type": "TemplateElement",
      "value": {
        "cooked": null,
        "raw": "Hello, \\world\\!",
      },
    },
  ],
  "start": 0,
  "type": "TemplateLiteral",
}
`;

exports[`parses an empty template 1`] = `
Node {
  "end": 0,
  "expressions": [],
  "quasis": [
    Node {
      "end": 0,
      "start": 0,
      "tail": true,
      "type": "TemplateElement",
      "value": {
        "cooked": "",
        "raw": "",
      },
    },
  ],
  "start": 0,
  "type": "TemplateLiteral",
}
`;

exports[`transpiles a html template with an interpolated expression 1`] = `"html\`Hello, \${"world"}!\`"`;

exports[`transpiles a html template with backquotes 1`] = `"html\`Hello, \\\`world\\\`!\`"`;

exports[`transpiles a html template with backslashes 1`] = `"html\`Hello, \\world\\!\`"`;

exports[`transpiles a markdown template with an interpolated expression 1`] = `"md\`Hello, \${"world"}!\`"`;

exports[`transpiles a markdown template with backquotes 1`] = `"md\`Hello, \\\`world\\\`!\`"`;

exports[`transpiles a markdown template with backslashes 1`] = `"md\`Hello, \\\\world\\\\!\`"`;

exports[`transpiles a node template with backslashes 1`] = `"Interpreter("node", {id: 1, format: "buffer"}).run(\`Hello, \\\\world\\\\!\`).then((file) => file.arrayBuffer())"`;

exports[`transpiles a simple html template 1`] = `"html\`Hello, world!\`"`;

exports[`transpiles a simple markdown template 1`] = `"md\`Hello, world!\`"`;

exports[`transpiles an empty html template 1`] = `""`;

exports[`transpiles an empty markdown template 1`] = `""`;
